--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- 这里不可以用 wrap_parent  -->
         <SurfaceView
             android:id="@+id/sv"
             android:layout_width="match_parent"
@@ -23,6 +24,18 @@
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/pic_url"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <ProgressBar
+            android:visibility="invisible"
+            android:id="@+id/item_progress"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/item_play"
+            android:layout_gravity="center"
+            android:src="@mipmap/video_play"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </FrameLayout>
 </LinearLayout>
